--- a/src/main/webapp/modules/counter/d.html
+++ b/src/main/webapp/modules/counter/d.html
@@ -142,7 +142,7 @@
 			<tfoot>
 			<tr>
 				<td colspan="5" class="text-right">
-					{{receipt.totalAmountLabel}} 
+					Total amount to {{receipt.totalAmountLabel}} 
 				</td>
 				<td class="text-right">
 					{{receipt.totalAmount | number : 2}}
@@ -151,7 +151,7 @@
 			</tr>		
 			<tr>
 				<td colspan="5" class="text-right">
-					{{receipt.customerAmountLabel}}  
+					Amount to {{receipt.customerAmountLabel}}  
 				</td>
 				<td class="text-right">
 					<input type="text" class="form-control input-sm" 
